2005-02-16  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp: fix missing set of 'pos' attribute on the argument to
	  a move operation in implementation of moveToPoint.

2005-02-09  James Turner  <james@worldforge.org>

	* Eris/Response.h, Eris/Response.cpp: add in helper class to track request
	  / response operation pairs, and dispatch them based on refno. This gives
	  more consistent and reliable routing for such ops, and simplifes 
	  several of the routers.
	  
	* Eris/Account.h, Eris/Account.cpp: changes to use the response system; as
	  a result, the AccountRouter is now very light-weight and the nasty
	  logic for recording refnos has gone.
	  
	* Eris/TypeService.cpp, Eris/TypeService.h: replace the private refno
	  tracking system with the generic response system.
	  
	* Eris/Connection.cpp, Eris/Connection.h: make Connection own a 
	  ResponseTracker instance, and give it a first-chance to handle all ops
	  which have a refno set.

2005-02-02  James Turner  <james@worldforge.org>

	* Eris/Connection.cpp: make the dispatch test for server info tighter,
	  to avoid erroneously stealing other ops which inherit INFO.
	  
	* Eris/Account.cpp: reduce severity of log messages

2005-02-02  James Turner  <james@worldforge.org>

	* Eris/Connection.cpp, Eris/Connection.h: add support for querying the
	  information data for the connected server. Results are returned using
	  the same format as meta-server queries.

	* Eris/ServerInfo.cpp, Eris/ServerInfo.h: make Connection a friend, so it
	  can update the information as necessary.

2005-01-30  James Turner  <james@worldforge.org>

	* Eris/TypeInfo.cpp, Eris/TypeInfo.h: switch from greedy to lazy expansion
	  of child (derived) types. This greaty reduces the initial server traffic
	  upon connection, but may also expose lingering bugs in the redispatch
	  logic. Added a predicate on TypeInfo to test if un-resolved children
	  exist for a type, and a method to trigger their lookup.
    