@@ -1,3 +1,9 @@
+2005-01-17  Al Riddoch  <alriddoch@zepler.org>
+
+	* Makefile.am, configure.ac, eris.spec.in: Update the way AC_INIT
+	  is called, remove the poll-glib specific pkgconfig and rpm files and
+	  clean up.
+
 2005-02-16  James Turner  <james@worldforge.org>
 
 	* Eris/Avatar.cpp: fix missing set of 'pos' attribute on the argument to
